# python-knowledge-base

./: .flake8  .pre-commit-config.yaml  404.html  README.md  base.ipynb  factory_boy.md  index.html  mkdocs.yml  pyproject.toml  setup-tips.md  sitemap.xml
.github/workflows/: ci.yml  cicd.yml
best_practices/code_principles/: index.html
best_practices/styleguide/: index.html
best_practices/zen_of_python/: index.html
boilerplates/datadog-local/: Pipfile  conf.yml  run.py
boilerplates/python-debug/: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml
django/image_field/: index.html
docs/: crud.md  factory_boy.md  image_field.md  index.md  pre-commit.md  python_virtual_env.md  styleguide.md
docs/CMS/: wagtail.md
docs/best_practices/: code_principles.md
docs/code_principles/: zen_of_python.md
docs/crud/: 0-index.md  01-checklist.md  1-backend.md  2-frontend.md
docs/django/: image_field.md
docs/machine_learning/: 1_introduction.md  2_regression.md  3_evaluation.md  4_regression_first_contact.ipynb  introduction.md  (+1 more)
documentation/: IDES.md  MACOS_SETUP.md  PYTHON_VIRTUAL_ENV.md
factory_boy/: index.html
onboarding/: README.md  SETUP.md  factory_boy.md  index.html  module1-python.md  module2-django.md  module3-drf.md  module4-pandas.md  module5-graphql.md  module7-docker.md  onboarding-template.md  project1-smul.md  project2-library.md  sample.md
pre-commit/: index.html
python_virtual_env/: index.html
sample_django_project/: .env  .env.sample  Makefile  docker-compose.yaml  manage.py  pytest.ini
search/: search_index.json
(+66 files in other folders)
