[tool.poetry]
name = "python-knowledge-base"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pip = "^22.1"
mkdocs-material = "^8.2.15"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-git-revision-date-localized-plugin = "^1.0.1"
Django = "4.0.6"
psycopg2-binary = "^2.9.3"
Jinja2 = "^3.1.2"
jupyter = "^1.0.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
isort = "5.10.1"
black = "22.3.0"
flake8 = "3.9.2"
pre-commit = "2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
